added the word JUCE to spelling dictionary

--- a/Source/.vscode/settings.json
+++ b/Source/.vscode/settings.json
@@ -57,5 +57,8 @@
         "set": "cpp",
         "string": "cpp",
         "*.mm": "cpp"
-    }
+    },
+    "cSpell.words": [
+        "juce"
+    ]
 }
