--- a/Source/.vscode/settings.json
+++ b/Source/.vscode/settings.json
@@ -56,7 +56,15 @@
         "random": "cpp",
         "set": "cpp",
         "string": "cpp",
-        "*.mm": "cpp"
+        "*.mm": "cpp",
+        "bit": "cpp",
+        "condition_variable": "cpp",
+        "list": "cpp",
+        "unordered_set": "cpp",
+        "future": "cpp",
+        "mutex": "cpp",
+        "shared_mutex": "cpp",
+        "typeindex": "cpp"
     },
     "cSpell.words": [
         "dphase",
